--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="..css/style.css" rel="stylesheet">
     <title>About Me | Greg Sirko</title>
 </head>
 <body>
@@ -17,8 +17,8 @@
 					<a href="/"><img src="../media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
-							<a href="/about/">About</a>
-							<a href="/work/">Work</a>
+							<a href="about/">About</a>
+							<a href="work/">Work</a>
 							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
 						</div>
 					</div>
@@ -77,13 +77,13 @@
 			<div class="big-cont">
 				<div class="flex-box al-c j-c">
 					<div class="fl-33 about-photo">
-						<img src="../media/plane.png" width="100%" alt="">
+						<img src="./media/plane.png" width="100%" alt="">
 					</div>
 					<div class="fl-33 about-photo">
-						<img src="../media/fire.png" width="100%" alt="">
+						<img src=".media/fire.png" width="100%" alt="">
 					</div>
 					<div class="fl-33 about-photo">
-						<img src="../media/me.png" width="100%" alt="">
+						<img src="./media/me.png" width="100%" alt="">
 					</div>
 				</div>
 			</div>
