Updating to relative paths

--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
 					<a href="/"><img src="../media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
-							<a href="about/">About</a>
+							<a href="./about/">About</a>
 							<a href="work/">Work</a>
 							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
 						</div>
