--- a/about/index.html
+++ b/about/index.html
@@ -14,10 +14,10 @@
         <div class="container">
             <div class="padding">
 				<div class="flex-box sp-b al-c fl-wr">
-					<a href="/"><img src="../media/g-logo.png" width="65px"></a>
+					<a href="../"><img src="../media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
-							<a href="/about/">About</a>
+							<a href="../about/">About</a>
 							<a href="../work/">Work</a>
 							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
 						</div>
