--- a/about/index.html
+++ b/about/index.html
@@ -77,13 +77,13 @@
 			<div class="big-cont">
 				<div class="flex-box al-c j-c">
 					<div class="fl-33 about-photo">
-						<img src="./media/plane.png" width="100%" alt="">
+						<img src="../media/plane.png" width="100%" alt="">
 					</div>
 					<div class="fl-33 about-photo">
-						<img src=".media/fire.png" width="100%" alt="">
+						<img src="../media/fire.png" width="100%" alt="">
 					</div>
 					<div class="fl-33 about-photo">
-						<img src="./media/me.png" width="100%" alt="">
+						<img src="../media/me.png" width="100%" alt="">
 					</div>
 				</div>
 			</div>
@@ -110,7 +110,7 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
@@ -121,7 +121,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
@@ -132,7 +132,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
@@ -152,7 +152,7 @@
 				</div>
 				<div class="flex-box-rev">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../media/place-square.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-c col-l marg t-l">
 						<h2>Marketing Websites</h2>
@@ -162,7 +162,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../media/place-square.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-c col-r marg t-l">
 						<h2>WordPress + Power Apps</h2>
@@ -172,7 +172,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../media/place-square.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h2>Web Apps</h2>
