--- a/work/milo/index.html
+++ b/work/milo/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
 	<title>Milo – UX Design Case Study | Power Apps Development</title>
+	<link rel="icon" href="../../favicon.ico">
 </head>
 <body class="flex-col j-c">
 	<section id="top-nav" class="header flex-col j-c al-c">
