--- a/work/index.html
+++ b/work/index.html
@@ -42,43 +42,43 @@
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr">
 					<div class="card">
-						<a href="/work/rita-cms/"><img src="/media/rita-cms-thumb.png" width="100%"></a>
-						<a href="/work/rita-cms/"><h3>Rita CMS -- Software Development</h3></a>
+						<a href="rita-cms/"><img src="../media/rita-cms-thumb.png" width="100%"></a>
+						<a href="rita-cms/"><h3>Rita CMS -- Software Development</h3></a>
 						<p>WordPress web app for club management</p>
 						<p style="color: grey;">#UXDesign #WordPress #Dataverse #API #PHP #Twig #FetchXML</p>
 					</div>
 					<div class="card">
-						<a href="/work/milo/"><img src="/media/milo-thumb.png" width="100%"></a>
-						<a href="/work/milo/"><h3>Milo -- Power Apps Development</h3></a>
+						<a href="milo/"><img src="../media/milo-thumb.png" width="100%"></a>
+						<a href="milo/"><h3>Milo -- Power Apps Development</h3></a>
 						<p>Project management Power App for internal teams</p>
 						<p style="color: grey;">#UXDesign #PowerApps #UI #CRM #Dataverse</p>
 					</div>
 					<div class="card">
-						<a href="/work/nurture-life/"><img src="/media/nurture-life-thumb.png" width="100%"></a>
-						<a href="/work/nurture-life/"><h3>Nurture Life -- UX Design</h3></a>
+						<a href="nurture-life/"><img src="../media/nurture-life-thumb.png" width="100%"></a>
+						<a href="nurture-life/"><h3>Nurture Life -- UX Design</h3></a>
 						<p>eCommerce experience flows for a meal service website</p>
 						<p style="color: grey;">#UXDesign #eCommerce #UI #AI #CustomerJourney</p>
 					</div>
 					<div class="card">
-						<a href="/work/united-cargo/"><img src="/media/united-card.png" width="100%"></a>
-						<a href="/work/united-cargo/"><h3>United Cargo -- UX Design</h3></a>
+						<a href="united-cargo/"><img src="../media/united-card.png" width="100%"></a>
+						<a href="united-cargo/"><h3>United Cargo -- UX Design</h3></a>
 						<p>Cargo shipment mobile app for United Airlines</p>
 						<p style="color: grey;">#UXDesign #WordPress #CSS #HTML #JavaScript</p>
 					</div>
 					<div class="card">
-						<img src="/media/jcma-card.png" width="100%">
+						<img src="../media/jcma-card.png" width="100%">
 						<h3>JCMA -- Web Design</h3>
 						<p>Web and brand overhaul for a digital design and marketing company</p>
 						<p style="color: grey;">#UXDesign #WordPress #Typography #Brand #DesignSystem</p>
 					</div>
 					<div class="card">
-						<img src="/media/darna-thumb.png" width="100%">
+						<img src="../media/darna-thumb.png" width="100%">
 						<h3>Darna -- WordPress Development</h3>
 						<p>Website design and development for an international liquer company</p>
 						<p style="color: grey;">#UXDesign #WordPress #CSS #HTML #JavaScript</p>
 					</div>
 					<div class="card">
-						<img src="/media/ford-card.png" width="100%">
+						<img src="../media/ford-card.png" width="100%">
 						<h3>FordPass -- UX Design</h3>
 						<p>Automotive companion app for Ford Motor Company</p>
 						<p style="color: grey;">#UserResearch #UXDesign #Prototyping #UI</p>
