Fixing relative links

--- a/work/index.html
+++ b/work/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 	<link href="../css/style.css" rel="stylesheet">
 	<title>Greg Sirko – UX Designer + Web Developer</title>
+	<link rel="icon" href="../favicon.ico">
 </head>
 <body>
 	<section id="top-nav" class="header flex-col j-c al-c">
