Fixing relative links

--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -6,8 +6,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-	<link href="/css/style.css" rel="stylesheet">
+	<link href="../css/style.css" rel="stylesheet">
 	<title>Nurture Life – UX Design Case Study | eCommerce</title>
+	<link rel="icon" href="../../favicon.ico">
 </head>
 <body class="flex-col j-c">
 	<section id="top-nav" class="header flex-col j-c al-c">
@@ -17,8 +18,8 @@
 					<a href="/"><img src="/media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
-							<a href="/about/">About</a>
-							<a href="/work/">Work</a>
+							<a href="../../about/">About</a>
+							<a href="../../work/">Work</a>
 							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
 						</div>
 					</div>
@@ -62,7 +63,7 @@
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="marg">
-						<img class="shad" src="/media/rita-cms-thumb.png" alt="" width="100%">
+						<img class="shad" src="../../media/rita-cms-thumb.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
@@ -90,7 +91,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Context</h5>
@@ -105,12 +106,12 @@
 						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
 					</div>
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
 					</div>
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Tech Stack</h5>
@@ -145,7 +146,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Clunky UI affordances</h3>
@@ -156,7 +157,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>External tool reliance</h3>
@@ -167,7 +168,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Lack of state awareness</h3>
@@ -200,7 +201,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Clunky UI affordances</h3>
@@ -211,7 +212,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>External tool reliance</h3>
@@ -222,7 +223,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Lack of state awareness</h3>
@@ -257,7 +258,7 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
@@ -267,7 +268,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
@@ -277,7 +278,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
@@ -349,7 +350,7 @@
 				</div>
 				<div class="flex-box">
 					<div class="flex-col marg">
-						<img class="shad" src="/media/milo-spread.png" alt="" width="100%">
+						<img class="shad" src="../../media/milo-spread.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
