Fixing relative links

--- a/work/milo/index.html
+++ b/work/milo/index.html
@@ -15,11 +15,11 @@
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c">
-					<a href="/"><img src="/media/g-logo.png" width="65px"></a>
+					<a href="/"><img src="../../media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
-							<a href="../about/">About</a>
-							<a href="../work/">Work</a>
+							<a href="../../about/">About</a>
+							<a href="../../work/">Work</a>
 							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
 						</div>
 					</div>
@@ -62,7 +62,7 @@
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="marg">
-						<img class="shad" src="/media/milo-spread.png" alt="" width="100%">
+						<img class="shad" src="../../media/milo-spread.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
@@ -90,7 +90,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/jcma-tile.png" alt="" width="100%">
+						<img class="shad" src="../../media/jcma-tile.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Context</h5>
@@ -100,7 +100,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/project-managers.png" alt="" width="100%">
+						<img class="shad" src="../../media/project-managers.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
@@ -110,7 +110,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/excel-tile.png" alt="" width="100%">
+						<img class="shad" src="../../media/excel-tile.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Workflow</h5>
@@ -145,7 +145,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/clunky-ui-affordances.png" alt="" width="100%">
+						<img class="shad" src="../../media/clunky-ui-affordances.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Clunky UI affordances</h3>
@@ -156,7 +156,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/external-tool-reliance.png" alt="" width="100%">
+						<img class="shad" src="../../media/external-tool-reliance.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>External tool reliance</h3>
@@ -167,7 +167,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/lack-of-state-awareness.png" alt="" width="100%">
+						<img class="shad" src="../../media/lack-of-state-awareness.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Lack of state awareness</h3>
@@ -200,7 +200,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/wireframes-excel.png" alt="" width="100%">
+						<img class="shad" src="../../media/wireframes-excel.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Spreadsheet Mania</h3>
@@ -211,7 +211,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/wireframes.png" alt="" width="100%">
+						<img class="shad" src="../../media/wireframes.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Designing an Editable Grid</h3>
@@ -222,7 +222,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/wireframes-fluent-ui.png" alt="" width="100%">
+						<img class="shad" src="../../media/wireframes-fluent-ui.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Ideal Task Form with Fluent UI</h3>
@@ -257,7 +257,7 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/task-status.png" alt="" width="100%">
+						<img class="shad" src="../../media/task-status.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
@@ -267,7 +267,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/task-time.png" alt="" width="100%">
+						<img class="shad" src="../../media/task-time.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
@@ -277,7 +277,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/comments-noti.png" alt="" width="100%">
+						<img class="shad" src="../../media/comments-noti.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
@@ -287,7 +287,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/comments.png" alt="" width="100%">
+						<img class="shad" src="../../media/comments.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">04</h2>
@@ -311,7 +311,7 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/priorities-dashboard-2.png" alt="" width="100%">
+						<img class="shad" src="../../media/priorities-dashboard-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
@@ -321,7 +321,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/user-form-priorities.png" alt="" width="100%">
+						<img class="shad" src="../../media/user-form-priorities.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
@@ -331,7 +331,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/priority-hours-rollup-2.png" alt="" width="100%">
+						<img class="shad" src="../../media/priority-hours-rollup-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
@@ -341,7 +341,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/editable-priorities.png" alt="" width="100%">
+						<img class="shad" src="../../media/editable-priorities.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">04</h2>
@@ -413,7 +413,7 @@
 				</div>
 				<div class="flex-box">
 					<div class="flex-col marg">
-						<img class="shad" src="/media/nurture-life-spread.png" alt="" width="100%">
+						<img class="shad" src="../../media/nurture-life-spread.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
