Fixing relative links

--- a/work/nurture-life/index.html
+++ b/work/nurture-life/index.html
@@ -6,19 +6,20 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-	<link href="/css/style.css" rel="stylesheet">
+	<link href="../../css/style.css" rel="stylesheet">
 	<title>Nurture Life – UX Design Case Study | eCommerce</title>
+	<link rel="icon" href="../../favicon.ico">
 </head>
 <body class="flex-col j-c">
 	<section id="top-nav" class="header flex-col j-c al-c">
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c">
-					<a href="/"><img src="/media/g-logo.png" width="65px"></a>
+					<a href="/"><img src="../../media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
-							<a href="/about/">About</a>
-							<a href="/work/">Work</a>
+							<a href="../../about/">About</a>
+							<a href="../../work/">Work</a>
 							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
 						</div>
 					</div>
@@ -61,7 +62,7 @@
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="marg">
-						<img class="shad" src="/media/nurture-life-spread.png" alt="" width="100%">
+						<img class="shad" src="../../media/nurture-life-spread.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
@@ -89,7 +90,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/parents.png" alt="" width="100%">
+						<img class="shad" src="../../media/parents.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
@@ -99,7 +100,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/nl-opportunity.png" alt="" width="100%">
+						<img class="shad" src="../../media/nl-opportunity.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Opportunity</h5>
@@ -134,7 +135,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/ai-powered.png" alt="" width="100%">
+						<img class="shad" src="../../media/ai-powered.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>AI-powered</h3>
@@ -146,7 +147,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/personalization.png" alt="" width="100%">
+						<img class="shad" src="../../media/personalization.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Personalization</h3>
@@ -158,7 +159,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/customer-journeys.png" alt="" width="100%">
+						<img class="shad" src="../../media/customer-journeys.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Customer Journeys</h3>
@@ -192,7 +193,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Prompts to create an account too early</h3>
@@ -203,7 +204,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Checkout process is long and complicated</h3>
@@ -214,7 +215,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Extra costs are too high</h3>
@@ -225,7 +226,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Can't calculate total order cost up front</h3>
@@ -260,7 +261,7 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/personalization-1.png" alt="" width="100%">
+						<img class="shad" src="../../media/personalization-1.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
@@ -270,7 +271,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/personalization-2.png" alt="" width="100%">
+						<img class="shad" src="../../media/personalization-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
@@ -294,7 +295,7 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
@@ -304,7 +305,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
@@ -314,7 +315,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
@@ -338,7 +339,7 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
@@ -348,7 +349,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
@@ -358,7 +359,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
@@ -430,7 +431,7 @@
 				</div>
 				<div class="flex-box">
 					<div class="flex-col marg">
-						<img class="shad" src="/media/united-cargo-spread.png" alt="" width="100%">
+						<img class="shad" src="../../media/united-cargo-spread.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
