Fixing relative links

--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -32,7 +32,7 @@
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="marg">
-						<h4>Nurture Life</h4>
+						<h4>Rita CMS</h4>
 						<h1>Club membership management WordPress app built with Microsoft Power Apps and Dataverse API</h1>
 					</div>
 				</div>
