Changing flex boxes

--- a/work/nurture-life/index.html
+++ b/work/nurture-life/index.html
@@ -251,7 +251,7 @@
 	<section id="outcomes" class="flex-col j-c">
 		<div class="w-cont">
 			<div class="flex-col">
-				<div class="col-l marg t-l">
+				<div class="col-l fl-50 marg t-l">
 					<h5 class="section-intro">CX JOURNEY 1</h5>
 					<h2 class="section-intro">Sign Up Flow: Personalization</h2>
 				</div>
