--- a/work/nurture-life/index.html
+++ b/work/nurture-life/index.html
@@ -253,7 +253,7 @@
 			<div class="flex-col">
 				<div class="col-l marg t-l">
 					<h5 class="section-intro">CX JOURNEY 1</h5>
-					<h2 class="section-intro">Sign Up Flow: Personalization</h2>
+					<h2 class="section-intro">Sign Up Flow:<br>Personalization</h2>
 				</div>
 			</div>
 		</div>
@@ -265,7 +265,7 @@
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
-						<h2 class="big">Personalized Recommendation</h2>
+						<h2 class="big">Recommended Products</h2>
 						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
 					</div>
 				</div>
