Changing relative paths

--- a/work/united-cargo/index.html
+++ b/work/united-cargo/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 	<link href="../../css/style.css" rel="stylesheet">
 	<title>United Cargo – UX Design Case Study</title>
+	<link rel="icon" href="../../favicon.ico">
 </head>
 <body class="flex-col j-c">
 	<section id="top-nav" class="header flex-col j-c al-c">
@@ -17,8 +18,8 @@
 					<a href="/"><img src="/media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
-							<a href="/about/">About</a>
-							<a href="/work/">Work</a>
+							<a href="../../about/">About</a>
+							<a href="../../work/">Work</a>
 							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
 						</div>
 					</div>
@@ -61,7 +62,7 @@
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="marg">
-						<img class="" src="/media/united-cargo-spread.png" alt="" width="100%">
+						<img class="" src="../../media/united-cargo-spread.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
@@ -89,7 +90,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Context</h5>
@@ -99,7 +100,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
@@ -109,7 +110,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Workflow</h5>
@@ -144,7 +145,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/competitive-analysis-2.png" alt="" width="100%">
+						<img class="shad" src="../../media/competitive-analysis-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Mobile must be intuitive</h3>
@@ -155,7 +156,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/secondary-research-2.png" alt="" width="100%">
+						<img class="shad" src="../../media/secondary-research-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Keep forms quick and concise</h3>
@@ -166,7 +167,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/old-website-1-2.png" alt="" width="100%">
+						<img class="shad" src="../../media/old-website-1-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Lack of state awareness</h3>
@@ -199,7 +200,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/sketches.png" alt="" width="100%">
+						<img class="shad" src="../../media/sketches.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Sketching</h3>
@@ -210,7 +211,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/uc-wireframes.png" alt="" width="100%">
+						<img class="shad" src="../../media/uc-wireframes.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Wireframes</h3>
@@ -221,7 +222,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="/media/uc-usability-testing.png" alt="" width="100%">
+						<img class="shad" src="../../media/uc-usability-testing.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Usbility Testing</h3>
@@ -256,7 +257,7 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/flight-schedules.png" alt="" width="100%">
+						<img class="shad" src="../../media/flight-schedules.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
@@ -266,7 +267,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/booking.png" alt="" width="100%">
+						<img class="shad" src="../../media/booking.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
@@ -276,7 +277,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="/media/tracking.png" alt="" width="100%">
+						<img class="shad" src="../../media/tracking.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
@@ -348,7 +349,7 @@
 				</div>
 				<div class="flex-box">
 					<div class="flex-col marg">
-						<img class="shad" src="/media/nurture-life-spread.png" alt="" width="100%">
+						<img class="shad" src="../../media/nurture-life-spread.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
