--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<section id="work" class="flex-col j-c al-c dark-white-2">
 		<div class="container">
 			<div class="padding">
-				<div class="flex-box sp-b al-c fl-wr">
+				<div class="flex-box j-c al-c fl-wr">
 					<div class="card">
 						<a href="work/rita-cms/"><img src="media/rita-cms-thumb.png" width="100%"></a>
 						<a href="work/rita-cms/"><h3>Rita CMS -- Software Development</h3></a>
