--- a/work/index.html
+++ b/work/index.html
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="work" class="flex-col j-c al-c dark-white">
+	<section id="work" class="flex-col j-c al-c dark-white-2">
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr">
