--- a/about/index.html
+++ b/about/index.html
@@ -185,7 +185,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="t-c" class="white">
+	<section class="t-c white">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div>
