Fixing home logo link path

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr">
-					<a href="/"><img src="media/g-logo.png" width="65px"></a>
+					<a href="../../"><img src="media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
 							<a href="about/">About</a>
