--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -14,13 +14,13 @@
 	<section id="top-nav" class="header flex-col j-c al-c">
 		<div class="container">
 			<div class="padding">
-				<div class="flex-box sp-b al-c">
-					<a href="../../"><img src="../../media/g-logo.png" width="65px"></a>
+				<div class="flex-box sp-b al-c fl-wr">
+					<a href="../../" class="home-logo"><img src="../../media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
-							<a href="../../about/">About</a>
-							<a href="../../work/">Work</a>
-							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
+							<a href="../../about/" class="fl-33">About</a>
+							<a href="../../work/" class="fl-33">Work</a>
+							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank" class="fl-33">Resume</a>
 						</div>
 					</div>
 				</div>
@@ -356,5 +356,6 @@
 			</div>
 		</div>
 	</section>
+	<script src="../../js/sticky-nav.js"></script>
 </body>
 </html>
