--- a/about/index.html
+++ b/about/index.html
@@ -10,8 +10,8 @@
     <title>About Me | Greg Sirko</title>
 	<link rel="icon" href="../favicon.ico">
 </head>
-<body>
-    <section id="top-nav" class="header flex-col j-c al-c">
+<body style="background-color: #1a1a1a;">
+    <section id="top-nav" class="header flex-col j-c al-c" style="background-color: #000000cc;">
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr">
