--- a/about/index.html
+++ b/about/index.html
@@ -48,13 +48,13 @@
 					<div class="fl-33">
 						<div class="stat">
 							<h2 class="huge">5+</h2>
-							<p>years' experience</p>
+							<p>Years' experience</p>
 						</div>
 					</div>
 					<div class="fl-33">
 						<div class="stat">
 							<h2 class="huge">50+</h2>
-							<p>websites</p>
+							<p>Websites</p>
 						</div>
 					</div>
 					<div class="fl-33">
@@ -65,8 +65,8 @@
 					</div>
 					<div class="fl-33">
 						<div class="stat">
-							<h2 class="huge">Chicagoland</h2>
-							<p>area</p>
+							<h2 class="huge">Chicago</h2>
+							<p>Area</p>
 						</div>
 					</div>
 				</div>
